--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-22 17:44+0800\n"
+"POT-Creation-Date: 2022-12-24 13:01+0800\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1908,7 +1908,7 @@ msgstr ""
 
 msgid ""
 "Arachne engine only works when overhang slowing down is disabled.\n"
-"This may cause decline in the quality of overhang surface when print fastly"
+"This may cause decline in the quality of overhang surface when print fastly\n"
 msgstr ""
 
 msgid ""
@@ -1960,7 +1960,7 @@ msgstr "%1% kitöltési mintázat nem támogatja a 100%%-os kitöltés."
 msgid ""
 "Switch to rectilinear pattern?\n"
 "Yes - switch to rectilinear pattern automaticlly\n"
-"No  - reset density to default non 100% value automaticlly"
+"No  - reset density to default non 100% value automaticlly\n"
 msgstr ""
 
 msgid "Auto bed leveling"
@@ -2885,8 +2885,13 @@ msgid ""
 "It contains the following information:\n"
 "1. The Process presets\n"
 "2. The Filament presets\n"
-"3. The Printer presets"
+"3. The Printer presets\n"
 msgstr ""
+"Szeretnéd szinkronizálni személyes adataidat a Bambu Cloudból?\n"
+"Ezek az adatok a következő információkat tartalmazzák:\n"
+"1. Folyamat beállítások\n"
+"2. Filament beállítások\n"
+"3. Nyomtató beállítások\n"
 
 msgid "Synchronization"
 msgstr "Szinkronizálás"
@@ -3250,6 +3255,12 @@ msgstr "Az integráció nem sikerült."
 msgid "Undo integration was successful."
 msgstr "Az integráció visszavonása sikeres volt."
 
+msgid "New network plug-in available."
+msgstr ""
+
+msgid "Details"
+msgstr ""
+
 msgid "Undo integration failed."
 msgstr "Az integráció visszavonása nem sikerült."
 
@@ -3537,8 +3548,10 @@ msgstr ""
 #, c-format, boost-format
 msgid ""
 "The 3mf's version %s is newer than %s's version %s, Found following keys "
-"unrecognized:"
+"unrecognized:\n"
 msgstr ""
+"A 3mf fájl %s verziója újabb, mint a(z) %s verziója %s, a következő "
+"ismeretlen kulcsokat találtuk:\n"
 
 msgid "You'd better upgrade your software.\n"
 msgstr "Jobb lenne, ha frissítenéd a szoftvert.\n"
@@ -3546,11 +3559,11 @@ msgstr "Jobb lenne, ha frissítenéd a szoftvert.\n"
 msgid "Newer 3mf version"
 msgstr "Újabb 3mf verzió"
 
-#, c-format, boost-format
+#, fuzzy, c-format, boost-format
 msgid ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
-"software."
-msgstr ""
+"software.\n"
+msgstr "\n"
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
@@ -3830,9 +3843,9 @@ msgid ""
 "on Bambu Studio(windows) or CAD softwares."
 msgstr ""
 
-#, c-format, boost-format
-msgid "Plate %d: %s does not support filament %s (%s)."
-msgstr ""
+#, fuzzy, c-format, boost-format
+msgid "Plate %d: %s does not support filament %s (%s).\n"
+msgstr "\n"
 
 msgid "Switching the language requires application restart.\n"
 msgstr "A nyelvváltáshoz az alkalmazás újraindítása szükséges.\n"
@@ -4314,13 +4327,13 @@ msgstr ""
 
 msgid ""
 "Please check the following infomation and click Confirm to continue sending "
-"print:"
+"print:\n"
 msgstr ""
 
 msgid ""
 "The printer type used to generate G-code is not the same type as the "
 "currently selected physical printer. It is recommend to re-slice by "
-"selecting the same printer type."
+"selecting the same printer type.\n"
 msgstr ""
 
 #, c-format, boost-format
@@ -4429,6 +4442,12 @@ msgid ""
 msgstr ""
 
 msgid ""
+"For \"Tree Strong\" and \"Tree Hybrid\" styles, we recommand the following "
+"settings: at least 2 interface layers, at least 0.1 top z distance or using "
+"support materials on interface."
+msgstr ""
+
+msgid ""
 "When using support material for the support interface, We recommand the "
 "following settings:\n"
 "0 top distance, 0 interface spacing, concentric pattern."
@@ -4438,7 +4457,7 @@ msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
-"\"->\"Timelapse Wipe Tower\"."
+"\"->\"Timelapse Wipe Tower\".\n"
 msgstr ""
 
 msgid "Line width"
@@ -5195,6 +5214,17 @@ msgstr ""
 msgid "version %s update information :"
 msgstr ""
 
+msgid "Network plug-in update"
+msgstr ""
+
+msgid ""
+"Click OK to update the Network plug-in when Bambu Studio launches next time."
+msgstr ""
+
+#, c-format, boost-format
+msgid "A new Network plug-in(%s) available, Do you want to install it?"
+msgstr ""
+
 msgid "New version of Bambu Studio"
 msgstr "A Bambu Studio új verziója"
 
@@ -5509,10 +5539,11 @@ msgstr ""
 msgid "%1% is too tall, and collisions will be caused."
 msgstr "%1% túl magas, a nyomtatás során előfordulhatnak ütközések."
 
-msgid " is too close to others, there may be collisions when printing."
+msgid " is too close to others, there may be collisions when printing.\n"
 msgstr ""
 
-msgid " is too close to exclusion area, there may be collisions when printing."
+msgid ""
+" is too close to exclusion area, there may be collisions when printing.\n"
 msgstr ""
 
 msgid "Prime Tower"
@@ -5614,9 +5645,9 @@ msgstr ""
 msgid "Layer height cannot exceed nozzle diameter"
 msgstr "A rétegmagasság nem lehet nagyobb a fúvóka átmérőjénél."
 
-#, c-format, boost-format
-msgid "Plate %d: %s does not support filament %s"
-msgstr ""
+#, fuzzy, c-format, boost-format
+msgid "Plate %d: %s does not support filament %s\n"
+msgstr "\n"
 
 msgid "Generating skirt & brim"
 msgstr "Szoknya & perem generálása"
@@ -8009,12 +8040,6 @@ msgstr ""
 #~ "Kérjük, orvosold a problémát a tárgy tálcára helyezésével vagy a tálcáról "
 #~ "való eltávolításával és a tárgy magasságának ellenőrzésével."
 
-#~ msgid ""
-#~ "Arachne engine only works when overhang slowing down is disabled.\n"
-#~ "This may cause decline in the quality of overhang surface when print "
-#~ "fastly\n"
-#~ msgstr "\n"
-
 #~ msgid "Auto arrange"
 #~ msgstr "Automatikus elrendezés"
 
@@ -8099,19 +8124,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Szinkronizálni szeretnéd személyes adataid a Bambu Cloud-ból? \n"
 #~ "A következő információkat tartalmazza:\n"
-#~ "1. Folyamat beállítások\n"
-#~ "2. Filament beállítások\n"
-#~ "3. Nyomtató beállítások\n"
-
-#~ msgid ""
-#~ "Do you want to synchronize your personal data from Bambu Cloud? \n"
-#~ "It contains the following information:\n"
-#~ "1. The Process presets\n"
-#~ "2. The Filament presets\n"
-#~ "3. The Printer presets\n"
-#~ msgstr ""
-#~ "Szeretnéd szinkronizálni személyes adataidat a Bambu Cloudból?\n"
-#~ "Ezek az adatok a következő információkat tartalmazzák:\n"
 #~ "1. Folyamat beállítások\n"
 #~ "2. Filament beállítások\n"
 #~ "3. Nyomtató beállítások\n"
@@ -8316,19 +8328,8 @@ msgstr ""
 #~ msgid "Per object edit"
 #~ msgstr "Szerkesztés objektumonként"
 
-#~ msgid "Plate %d: %s does not support filament %s\n"
-#~ msgstr "\n"
-
 #~ msgid "Plate %d: %s does not support filament %s.\n"
 #~ msgstr "%d. tálca: %s nem használható %s filamenttel.\n"
-
-#~ msgid "Plate %d: %s does not support filament %s (%s).\n"
-#~ msgstr "\n"
-
-#~ msgid ""
-#~ "Please check the following infomation and click Confirm to continue "
-#~ "sending print:\n"
-#~ msgstr "\n"
 
 #~ msgid "Please fill report first."
 #~ msgstr "Kérjük, először töltsd ki a riportot."
@@ -8467,12 +8468,6 @@ msgstr ""
 #~ "anyagú filamentet használsz támaszként."
 
 #~ msgid ""
-#~ "Switch to rectilinear pattern?\n"
-#~ "Yes - switch to rectilinear pattern automaticlly\n"
-#~ "No  - reset density to default non 100% value automaticlly\n"
-#~ msgstr "\n"
-
-#~ msgid ""
 #~ "Switch to zig-zag pattern?\n"
 #~ "Yes - switch to zig-zag pattern automaticlly\n"
 #~ "No  - reset density to default non 100% value automaticlly\n"
@@ -8484,18 +8479,6 @@ msgstr ""
 
 #~ msgid "Swith cloud environment, Please login again!"
 #~ msgstr "Felhőkörnyezet váltása, kérjük, jelentkezz be újra!"
-
-#~ msgid ""
-#~ "The 3mf's version %s is newer than %s's version %s, Found following keys "
-#~ "unrecognized:\n"
-#~ msgstr ""
-#~ "A 3mf fájl %s verziója újabb, mint a(z) %s verziója %s, a következő "
-#~ "ismeretlen kulcsokat találtuk:\n"
-
-#~ msgid ""
-#~ "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade "
-#~ "your software.\n"
-#~ msgstr "\n"
 
 #~ msgid "The Config is not compatible and can not be loaded."
 #~ msgstr "A konfiguráció nem kompatibilis és nem tölthető be!"
@@ -8515,12 +8498,6 @@ msgstr ""
 #~ "A modellnek átfedésben lévő vagy egymást metsző elemei vannak. "
 #~ "Megkíséreltük a javítást, azonban javasoljuk az eredmények ellenőrzését "
 #~ "vagy a bemeneti fájl javítását és az újbóli próbálkozást."
-
-#~ msgid ""
-#~ "The printer type used to generate G-code is not the same type as the "
-#~ "currently selected physical printer. It is recommend to re-slice by "
-#~ "selecting the same printer type.\n"
-#~ msgstr "\n"
 
 #~ msgid ""
 #~ "This object will be used to purge the nozzle after a filament change to "
@@ -8572,13 +8549,6 @@ msgstr ""
 #~ msgstr "Várakozás"
 
 #~ msgid ""
-#~ "When recording timelapse without toolhead, it is recommended to add a "
-#~ "\"Timelapse Wipe Tower\" \n"
-#~ "by right-click the empty position of build plate and choose \"Add "
-#~ "Primitive\"->\"Timelapse Wipe Tower\".\n"
-#~ msgstr "\n"
-
-#~ msgid ""
 #~ "You have changed some preset settings. \n"
 #~ "Would you like to keep these changed settings after switching preset?"
 #~ msgstr ""
@@ -8593,17 +8563,10 @@ msgstr ""
 #~ msgstr " Objektum:"
 
 #~ msgid ""
-#~ " is too close to exclusion area, there may be collisions when printing.\n"
-#~ msgstr "\n"
-
-#~ msgid ""
 #~ " is too close to exclusion area, there will be collisions when printing.\n"
 #~ msgstr ""
 #~ " túl közel van a tiltott területhez, a nyomtatás során előfordulhatnak "
 #~ "ütközések.\n"
-
-#~ msgid " is too close to others, there may be collisions when printing.\n"
-#~ msgstr "\n"
 
 #~ msgid " is too close to others, there will be collisions when printing.\n"
 #~ msgstr ""
