--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-22 17:44+0800\n"
+"POT-Creation-Date: 2022-12-24 13:01+0800\n"
 "PO-Revision-Date: 2022-12-22 17:47+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -1838,8 +1838,10 @@ msgstr ""
 
 msgid ""
 "Arachne engine only works when overhang slowing down is disabled.\n"
-"This may cause decline in the quality of overhang surface when print fastly"
+"This may cause decline in the quality of overhang surface when print fastly\n"
 msgstr ""
+"Arachne引擎只在关闭悬垂降速时起作用。\n"
+"这可能会导致高速打印时悬垂表面质量的下降\n"
 
 msgid ""
 "Disable overhang slowing down automatically? \n"
@@ -1891,8 +1893,11 @@ msgstr "%1% 填充图案不支持 100%% 密度。"
 msgid ""
 "Switch to rectilinear pattern?\n"
 "Yes - switch to rectilinear pattern automaticlly\n"
-"No  - reset density to default non 100% value automaticlly"
+"No  - reset density to default non 100% value automaticlly\n"
 msgstr ""
+"切换到直线图案？\n"
+"是 - 自动切换到直线图案\n"
+"否 - 自动重置为非100%填充密度\n"
 
 msgid "Auto bed leveling"
 msgstr "自动热床调平"
@@ -1976,10 +1981,10 @@ msgid "Unknown"
 msgstr "未定义"
 
 msgid "Fatal"
-msgstr ""
+msgstr "致命"
 
 msgid "Serious"
-msgstr ""
+msgstr "严重"
 
 msgid "Common"
 msgstr ""
@@ -2812,8 +2817,13 @@ msgid ""
 "It contains the following information:\n"
 "1. The Process presets\n"
 "2. The Filament presets\n"
-"3. The Printer presets"
+"3. The Printer presets\n"
 msgstr ""
+"想从Bambu 云同步你的个人数据吗?\n"
+"包含如下信息:\n"
+"1. 工艺预设\n"
+"2. 打印丝预设\n"
+"3. 打印机预设\n"
 
 msgid "Synchronization"
 msgstr "同步"
@@ -3184,6 +3194,12 @@ msgstr "集成失败。"
 msgid "Undo integration was successful."
 msgstr "集成取消成功。"
 
+msgid "New network plug-in available."
+msgstr "新的网络插件可用。"
+
+msgid "Details"
+msgstr "详情"
+
 msgid "Undo integration failed."
 msgstr "集成取消失败。"
 
@@ -3468,8 +3484,8 @@ msgstr "该3mf文件来自旧版本的Bambu Lab，将只加载几何数据。"
 #, c-format, boost-format
 msgid ""
 "The 3mf's version %s is newer than %s's version %s, Found following keys "
-"unrecognized:"
-msgstr ""
+"unrecognized:\n"
+msgstr "该3mf的版本%s比%s的版本%s新，发现以下参数键值无法识别；\n"
 
 msgid "You'd better upgrade your software.\n"
 msgstr "建议升级您的软件版本。\n"
@@ -3480,8 +3496,8 @@ msgstr "较新的3mf版本"
 #, c-format, boost-format
 msgid ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
-"software."
-msgstr ""
+"software.\n"
+msgstr "该3mf文件的版本%s 比%s的版本%s更新，建议升级您的软件。\n"
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "该3mf文件与软件不兼容，将只加载几何数据。"
@@ -3759,8 +3775,8 @@ msgstr ""
 "模型。"
 
 #, c-format, boost-format
-msgid "Plate %d: %s does not support filament %s (%s)."
-msgstr ""
+msgid "Plate %d: %s does not support filament %s (%s).\n"
+msgstr "盘%d：%s不支持耗材丝%s (%s)。\n"
 
 msgid "Switching the language requires application restart.\n"
 msgstr "切换语言要求重启应用程序。\n"
@@ -4234,14 +4250,16 @@ msgstr "错误"
 
 msgid ""
 "Please check the following infomation and click Confirm to continue sending "
-"print:"
-msgstr ""
+"print:\n"
+msgstr "请检查以下信息，点击确认后继续发送打印：\n"
 
 msgid ""
 "The printer type used to generate G-code is not the same type as the "
 "currently selected physical printer. It is recommend to re-slice by "
-"selecting the same printer type."
+"selecting the same printer type.\n"
 msgstr ""
+"用于生成G-code的打印机类型与当前选定的物理打印机类型不同，建议选择相同的打印"
+"机类型重新切片。\n"
 
 #, c-format, boost-format
 msgid "The %s filament is too soft to be used with the AMS"
@@ -4358,6 +4376,12 @@ msgstr ""
 "否 - 不用为我调整这些设置"
 
 msgid ""
+"For \"Tree Strong\" and \"Tree Hybrid\" styles, we recommand the following "
+"settings: at least 2 interface layers, at least 0.1 top z distance or using "
+"support materials on interface."
+msgstr ""
+
+msgid ""
 "When using support material for the support interface, We recommand the "
 "following settings:\n"
 "0 top distance, 0 interface spacing, concentric pattern."
@@ -4369,8 +4393,10 @@ msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
-"\"->\"Timelapse Wipe Tower\"."
+"\"->\"Timelapse Wipe Tower\".\n"
 msgstr ""
+"在录制无工具头延时摄影视频时，建议添加“延时摄影擦料塔”\n"
+"右键单击构建板的空白位置，选择“添加标准模型”->“延时摄影擦料塔”。\n"
 
 msgid "Line width"
 msgstr "线宽"
@@ -5091,6 +5117,17 @@ msgstr "更新说明"
 msgid "version %s update information :"
 msgstr "版本 %s 更新信息"
 
+msgid "Network plug-in update"
+msgstr "网络插件升级"
+
+msgid ""
+"Click OK to update the Network plug-in when Bambu Studio launches next time."
+msgstr "点击OK将在Bambu Studio下次启动之后自动升级网络插件"
+
+#, c-format, boost-format
+msgid "A new Network plug-in(%s) available, Do you want to install it?"
+msgstr "新的网络插件(%s) 可用，您是否需要安装它？"
+
 msgid "New version of Bambu Studio"
 msgstr "新版本的Bambu Studio"
 
@@ -5397,11 +5434,12 @@ msgstr "%1%离其它对象太近，可能会发生碰撞。"
 msgid "%1% is too tall, and collisions will be caused."
 msgstr "%1%太高，会发生碰撞。"
 
-msgid " is too close to others, there may be collisions when printing."
-msgstr ""
+msgid " is too close to others, there may be collisions when printing.\n"
+msgstr "到其他对象的距离太近了，可能在打印过程中发生碰撞。\n"
 
-msgid " is too close to exclusion area, there may be collisions when printing."
-msgstr ""
+msgid ""
+" is too close to exclusion area, there may be collisions when printing.\n"
+msgstr "到屏蔽区域的距离太近了，可能在打印过程中发生碰撞。\n"
 
 msgid "Prime Tower"
 msgstr "擦拭塔"
@@ -5484,8 +5522,8 @@ msgid "Layer height cannot exceed nozzle diameter"
 msgstr "层高不能超过喷嘴直径"
 
 #, c-format, boost-format
-msgid "Plate %d: %s does not support filament %s"
-msgstr ""
+msgid "Plate %d: %s does not support filament %s\n"
+msgstr "盘%d: %s 不支持耗材丝 %s\n"
 
 msgid "Generating skirt & brim"
 msgstr "正在生成skirt和brim"
@@ -7784,81 +7822,6 @@ msgid ""
 msgstr ""
 "提高强度\n"
 "你知道吗？你可以使用更多的墙层数和更高的疏散填充密度来提高模型的强度。"
-
-#~ msgid ""
-#~ "Arachne engine only works when overhang slowing down is disabled.\n"
-#~ "This may cause decline in the quality of overhang surface when print "
-#~ "fastly\n"
-#~ msgstr ""
-#~ "Arachne引擎只在关闭悬垂降速时起作用。\n"
-#~ "这可能会导致高速打印时悬垂表面质量的下降\n"
-
-#~ msgid ""
-#~ "Switch to rectilinear pattern?\n"
-#~ "Yes - switch to rectilinear pattern automaticlly\n"
-#~ "No  - reset density to default non 100% value automaticlly\n"
-#~ msgstr ""
-#~ "切换到直线图案？\n"
-#~ "是 - 自动切换到直线图案\n"
-#~ "否 - 自动重置为非100%填充密度\n"
-
-#~ msgid ""
-#~ "Do you want to synchronize your personal data from Bambu Cloud? \n"
-#~ "It contains the following information:\n"
-#~ "1. The Process presets\n"
-#~ "2. The Filament presets\n"
-#~ "3. The Printer presets\n"
-#~ msgstr ""
-#~ "想从Bambu 云同步你的个人数据吗?\n"
-#~ "包含如下信息:\n"
-#~ "1. 工艺预设\n"
-#~ "2. 打印丝预设\n"
-#~ "3. 打印机预设\n"
-
-#~ msgid ""
-#~ "The 3mf's version %s is newer than %s's version %s, Found following keys "
-#~ "unrecognized:\n"
-#~ msgstr "该3mf的版本%s比%s的版本%s新，发现以下参数键值无法识别；\n"
-
-#~ msgid ""
-#~ "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade "
-#~ "your software.\n"
-#~ msgstr "该3mf文件的版本%s 比%s的版本%s更新，建议升级您的软件。\n"
-
-#~ msgid "Plate %d: %s does not support filament %s (%s).\n"
-#~ msgstr "盘%d：%s不支持耗材丝%s (%s)。\n"
-
-#~ msgid ""
-#~ "Please check the following infomation and click Confirm to continue "
-#~ "sending print:\n"
-#~ msgstr "请检查以下信息，点击确认后继续发送打印：\n"
-
-#~ msgid ""
-#~ "The printer type used to generate G-code is not the same type as the "
-#~ "currently selected physical printer. It is recommend to re-slice by "
-#~ "selecting the same printer type.\n"
-#~ msgstr ""
-#~ "用于生成G-code的打印机类型与当前选定的物理打印机类型不同，建议选择相同的打"
-#~ "印机类型重新切片。\n"
-
-#~ msgid ""
-#~ "When recording timelapse without toolhead, it is recommended to add a "
-#~ "\"Timelapse Wipe Tower\" \n"
-#~ "by right-click the empty position of build plate and choose \"Add "
-#~ "Primitive\"->\"Timelapse Wipe Tower\".\n"
-#~ msgstr ""
-#~ "在录制无工具头延时摄影视频时，建议添加“延时摄影擦料塔”\n"
-#~ "右键单击构建板的空白位置，选择“添加标准模型”->“延时摄影擦料塔”。\n"
-
-#~ msgid " is too close to others, there may be collisions when printing.\n"
-#~ msgstr "到其他对象的距离太近了，可能在打印过程中发生碰撞。\n"
-
-#~ msgid ""
-#~ " is too close to exclusion area, there may be collisions when printing.\n"
-#~ msgstr "到屏蔽区域的距离太近了，可能在打印过程中发生碰撞。\n"
-
-#~ msgid "Plate %d: %s does not support filament %s\n"
-#~ msgstr "盘%d: %s 不支持耗材丝 %s\n"
 
 #~ msgid ""
 #~ "normal(auto) and tree(auto) is used to generate support automatically. If "
